[tool.poetry]
name = "mldatafind"
version = "0.1.0"
description = "Tools for gravitational wave data discovery"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12" 
gwosc = "^0.6.1" # for compatibility querying open data using gwpy < 3.0
gwpy = "^2.1"
ciecplib = "^0.7.1"
requests-gssapi = "^1.2.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.16"
pytest = "^7.1.3"
ipykernel = "^6.16.2"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | _build
  | dist
  | docs
)/
'''


[tool.isort]
known_first_party = ["mldatafind"]
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
