[tool.poetry]
name = "mldatafind"
version = "0.1.0"
description = "Luigi/Law Tasks for streamlining gravitational wave data discovery"
authors = ["Ethan Marx <emarx@mit.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13" 
luigi = "^3.5.1"
law = "^0.1.19"
cloudpathlib = "^0.18.1"
boto3 = "^1.34.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.16"
pytest = "^7.1.3"
ipykernel = "^6.16.2"
conda-lock = "^2.5.1"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | _build
  | dist
  | docs
)/
'''


[tool.isort]
known_first_party = ["mldatafind"]
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
